
  * New upstream snapshot from v0.4.3-1962-g13bbf88 at v0.4.3-1962-
    g13bbf88
    - depends on patsy
  * debian/control
    - requires ipython-notebook for building documentation
      (Build-Depends adjusted)
    - build for Python >= 2.7 due to absent python 2.6 build of pandas
      for wheezy
    - boosted policy to 3.9.4 (no further changes)
  * debian/copyright
    - years adjusted

 -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 31 Jul 2013 11:15:19 -0400

statsmodels (0.4.2-1) unstable; urgency=low

  * Fresh upstream release addressing FTBFS across big-endian architectures.

 -- Yaroslav Halchenko <debian@onerussian.com>  Fri, 29 Jun 2012 17:26:36 -0400

statsmodels (0.4.1-1) unstable; urgency=low

  * Fresh upstream release
    - dropped up_versioncomparison_with_rc
    - require Python >= 2.6
  * Do fail if unittests fail
  * Added joblib to build-depends since seems could be used during tests

 -- Yaroslav Halchenko <debian@onerussian.com>  Fri, 15 Jun 2012 17:57:17 -0400

statsmodels (0.4.0-2) unstable; urgency=low

  * Removed python-rpy from Recommends to avoid pulling Rtillery with
    with the default installation of statsmodels and pandas, since rpy apparently
    is mentioned only in some legacy code
  * Added patch up_versioncomparison_with_rc to "cherry-pick" 45ee896 for
    robust version comparison with rc versions of numpy/scipy

 -- Yaroslav Halchenko <debian@onerussian.com>  Sun, 13 May 2012 20:40:37 -0400

statsmodels (0.4.0-1) unstable; urgency=low

  * Fresh upstream release

 -- Yaroslav Halchenko <debian@onerussian.com>  Tue, 01 May 2012 09:34:58 -0400

statsmodels (0.4.0~rc2+git6-g756f2d0-1) experimental; urgency=low

  * Fresh upstream pre-release
    - all patches dropped (upstreamed)
    - scikits. name space is getting deprecated:
      - python-scikits.statsmodels is provided to ease code transition
      - python-statsmodels-doc replaces python-scikits.statsmodels-doc