@@ -4,7 +4,6 @@ Priority: extra
 Maintainer: NeuroDebian Team <team@neuro.debian.net>
 Uploaders: Yaroslav Halchenko <debian@onerussian.com>, Michael Hanke <michael.hanke@gmail.com>
 Build-Depends: debhelper (>= 7.0.50~),
-               python-support (>= 0.6),
                python-all-dev, python-setuptools,
                python-numpy (>= 1:1.4.0),
                python-scipy,
