@@ -11,8 +11,10 @@ statsmodels (0.4.2+git1962-g13bbf88-1) UNRELEASED; urgency=low
     - boosted policy to 3.9.4 (no further changes)
   * debian/copyright
     - years adjusted
+  * debian/rules
+    - migrate to dh_python2 from dh_pysupport
 
- -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 31 Jul 2013 11:15:19 -0400
+ -- Yaroslav Halchenko <debian@onerussian.com>  Thu, 01 Aug 2013 09:41:24 -0400
 
 statsmodels (0.4.2-1) unstable; urgency=low
 
